--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "framer-motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
